--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My 3D Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet"> <!-- 引入Google字体 -->
+</head>
+<body>
+    <header>
+        <div class="header-background">
+            <h1>Asura's 3D Portfolio</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about" class="about-section">
+        <h2>About Me</h2>
+        <div class="about-content">
+            <img src="profile.png" alt="Profile Picture" class="profile-pic">
+            <p>Welcome to my portfolio! I am a passionate 3D artist with experience in modeling, texturing, and animation. I am continuously improving my skills and eager to work on exciting projects in the gaming and film industries.</p>
+        </div>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <img src="project1.jpg" alt="Project 1">
+            <h3>Project Title 1</h3>
+            <p>A brief description of your project, the tools used, and your role in it.</p>
+        </div>
+        <div class="project">
+            <img src="project2.jpg" alt="Project 2">
+            <h3>Project Title 2</h3>
+            <p>A brief description of your project, the tools used, and your role in it.</p>
+        </div>
+        <div class="project">
+            <img src="project3.jpg" alt="Project 3">
+            <h3>Project Title 3</h3>
+            <p>A brief description of your project, the tools used, and your role in it.</p>
+        </div>
+        <!-- 你可以添加更多项目 -->
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Maya</li>
+            <li>Blender</li>
+            <li>3ds Max</li>
+            <li>ZBrush</li>
+            <li>Substance Painter</li>
+            <li>Unity / Unreal Engine</li>
+        </ul>
+    </section>
+
+    <footer id="contact">
+        <h2>Contact Me</h2>
+        <div class="contact-info">
+            <p>Email: <a href="mailto:your.email@example.com" class="contact-link">your.email@example.com</a></p>
+            <p>Phone: <span class="contact-info-text">0705559534</span></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank" class="contact-link">Your LinkedIn Profile</a></p>
+        </div>
+    </footer>
+</body>
+</html>
